# TieXiu

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE-MIT  PYO3_BOUNDARY.md  README.md  RULES.md  SYNTAX.md  pyproject.toml
.aiassistant/rules/: RULES.md  base.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: default.yml  publish.yml  release.yml
arc/src/: lib.rs
benches/: parsing.rs
corpus/: AGENTS.md  RULES.md  SESSIONS.md  memento.md
corpus/sessions/: session-ses_235c.md  session-ses_23da.md  session-ses_240f.md  session-ses_2688.md  session-ses_271a.md  session-ses_285e.md
docs/: book.toml
fragments/: _old_psd.rs  calc_test.rs  can_parse.rs  can_parse_sequence.rs  cargo_with_clap.toml  cst_interner.ts  cst_to_json.rs  ctx_error.rs  ctxi.rs  cursor.rs  cursor_str.rs  cut_simple.rs  dedent.rs  default.rs  ensure  featue_hierarhcy.rs  finalize.rs  fromenv.rs  grammar.rs  grammar_find_rule.rs  indent.rs  into_box.rs  into_json.rs  json_to_model.rs  linecol.rs  model_impl.rs  optional_can_parse.rs  parse_choice.rs  parse_result.rs  re_export.rs  readthedocs.yml  regexpp.rs  repeat.rs  repeat_plus.rs  return_fn.rs  rule.rs  scopeguard.rs  scopeguard_argument.rs  scopeguard_library.rs  sequence_smarter.rs  (+10 more)
grammar/: tatsu.json  tatsumodel.json
python/: test_kwargs_verify.py
python/tests/: test_api.py  test_ooapi.py  test_syntax.py
python/tiexiu/: __init__.py  fnapi.py  ooapi.py  pyfnapi.py
src/: api.rs  engine.rs  error.rs  lib.rs  main.rs  util.rs
src/_old_models/: call.rs  closure.rs  mod.rs  named.rs
src/api/: fnapi.rs  mod.rs  ooapi.rs
src/astree/: cst.rs  fmt.rs  mod.rs
src/cfg/: constants.rs  heartbeat.rs  keys.rs  mod.rs  types.rs
src/context/: core.rs  corectx.rs  ctx.rs  memo.rs  stackctx.rs  state.rs  strctx.rs
src/contexts/: ast.rs  cst.rs  (+9 more)
tests/: alerts_test.rs  api.rs  asjson.rs  ast.rs  ast_test.rs  basic_grammar_test.rs  bootstrap.rs  bootstrap_test.rs  buffering.rs  complex_grammars_test.rs  constants_test.rs  constraints_test.rs  directive_test.rs  directives_test.rs  ebnf_test.rs  eol_test.rs  error.rs  fixtures.rs  grammar_structure_test.rs  input_positions_test.rs  integration_tests.rs  join.rs  join_test.rs  json_crate_test.rs  json_value_import.rs  json_value_import_test.rs  keyword_test.rs  left_recursion.rs  left_recursion_test.rs  lookahead_test.rs  misc.rs  model.rs  model_test.rs  naming_test.rs  parameter_test.rs  parsing.rs  parsing_test.rs  pattern.rs  pattern_test.rs  patterns_test.rs  (+43 more)
(+171 files in other folders)
