[package]
name = "tiexiu"
version = "0.1.0"
edition = "2024"
authors = ["Juancarlo Añez <apalala@gmail.com>"]
description = "A port of the TatSu PEG parser generator to Rust"
license = "AGPL-3.0-or-later"
repository = "https://github.com/neogeny/tiexiu"
readme = "README.md"
exclude = [
    "pyproject.toml",
    "__pycache__",
]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }

[lib]
name = "tiexiu"
crate-type = ["cdylib", "rlib"]
