[package]
name = "tiexiu"
version = "0.1.1-alpha.1"
edition = "2026"
authors = ["Juancarlo Añez <apalala@gmail.com>"]
description = "A port of the TatSu PEG parser generator to Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neogeny/tiexiu"
readme = "README.md"
exclude = [
    "pyproject.toml",
    "__pycache__",
]

#[features]
#default = []
#python = ["dep:pyo3"]

[features]
regex = ["dep:regex"]
serde_json = ["dep:serde_json"]

[dependencies]
regex = { version = "1.10", optional = true }
serde_json = { version = "1.0.149", optional = true }
#pyo3 = { version = "0.28.2", features = ["extension-module"]}
#pyo3 = { version = "0.28.2", features = ["extension-module"], optional = true }

[lib]
name = "tiexiu"
crate-type = ["cdylib", "rlib"]